# KANElectra

./: .gitignore  CITATION.cff  README.md  nvidia.Dockerfile  pyproject.toml  requirements.txt  tpu.Dockerfile
.devcontainer/: Dockerfile  devcontainer.json  init  install_devpod_dependencies.sh  local.Dockerfile  local.devcontainer.json  nvidia.Dockerfile  packages.txt
.github/workflows/: docs-generator.yaml
configs/: train.yaml
data/: get_data.sh  scripts.py  validate_data.py
helm/electra-training/: Chart.yaml  values.yaml
helm/electra-training/templates/: job.yaml  pvc.yaml
notebooks/: data_processing.py  dataprocess.py  kan-transformers.ipynb  parse_SQuAD.ipynb  test.json  test.py
notebooks/.ipynb_checkpoints/: kan-transformers-checkpoint.ipynb
pipeline/: data.py  main.py  train.py
pipeline/modules/: __init__.py  preprocessing.py  pretraining_dataset.py
scripts/: train.py
scripts/pretraining/: data_processing.py  train.py
src/ElectraKAN/: __init__.py  attention.py  callbacks.py  datamodule.py  handlers.py  kan.py  models.py  modules.py  outputs.py
src/KANs/: attention.py  handlers.py  kan.py  models.py  outputs.py
test/: modeling.py  test_dataloader.py  test_datamodule.py  test_modules.py  test_streaming_dataset.py  test_training_handler.py
