[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ElectraKAN"
version = "0.1.0"
description = "ElectraKAN is Electra model using KAN model insteand of Fully Connected Layer."
authors = ["shin jung tae (shinjeongtae@gmail.com)"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ElectraKAN"]
